--- a/Maquetacion HTML/css/style.css
+++ b/Maquetacion HTML/css/style.css
@@ -32,11 +32,25 @@ BODY STYLING
 }
 
 body {
-	background-color: #2D2D37;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight:300;
 	text-align: left;
 	text-decoration: none;
+}
+
+header{
+	margin: 0 auto;
+}
+
+#logo{
+  height: 100px;
+  width: 40%;
+  min-width: 250px;
+  float: left;
+}
+#logo img{
+  width:auto;
+  height: 100px;
 }
 
 #wrapper {
@@ -78,7 +92,7 @@ body {
 	
 	/* CSS3 Gradient */
 	background-image: -webkit-gradient(radial, 0% 0%, 0% 100%, from(rgba(213,246,255,1)), to(rgba(213,246,255,0)));
-	background-image: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(213,246,255,1), rgba(213,246,255,0));
+	background-image: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(0, 0, 0, 1), rgba(213,246,255,0))
 	background-image: -moz-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
 	background-image: -ms-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
 	background-image: -o-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
@@ -243,8 +257,8 @@ FOOTER
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
 	
-	background: #56c2e1;
-	border: 1px solid #46b3d3;
+	background: #37D858;
+	border: 1px solid #1A9438;
 	border-radius: 5px;
 	cursor: pointer;
 	
@@ -254,7 +268,7 @@ FOOTER
 }
 
 .login-form .footer .button:hover {
-	background: #122D4C;
+	background: #16561C;
 	border: 1px solid rgba(256,256,256,0.75);
 	
 	box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
