--- a/Maquetacion HTML/estilos_form.css
+++ b/Maquetacion HTML/estilos_form.css
@@ -69,6 +69,72 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 padding: 4px 15px;
 }
+
+#rightTopMenuContainer{
+  width: 100%;
+   height: 42px;
+  position:fixed;
+  min-width:500px;
+  top: 0;
+  right: 0;
+  background: url(images/tab_b.png) repeat-x 0 0;
+
+  z-index: 999;
+}
+
+ul.rightTopMenu {
+display: block;
+position: relative;
+float: right;
+clear: right;
+height: 42px;
+width: auto;
+font-weight: bold;
+line-height: 42px;
+margin: 0;
+right: 150px;
+color: white;
+font-size: 80%;
+text-align: center;
+}
+
+.rightTopMenu li {
+float: left;
+text-transform: uppercase;
+font-size: 14px;
+line-height: 15px;
+list-style: none;
+padding: 10px 0;
+height: 42px;
+background: url(images/tab_m.png) repeat-x 0 0;
+}
+#rightTab {
+background: url(images/tab_r.png) no-repeat left 0;
+height: 42px;
+width: 30px;
+padding: 0;
+margin: 0;
+display: block;
+float: left;
+}
+#leftTab{
+  background: url(images/tab_l.png) no-repeat left 0;
+height: 42px;
+width: 30px;
+padding: 0;
+margin: 0;
+display: block;
+float: left;
+}
+.rightTopMenu li a {
+padding: 10px 15px;
+color: white;
+text-decoration: none;
+}
+.rightTopMenu li.last a{
+  color:#44C358;
+}
+
 /*Error de campos obligatorios en rojo*/
 #error{
   margin-bottom: 10px;
