--- a/Maquetacion HTML/estilos_home.css
+++ b/Maquetacion HTML/estilos_home.css
@@ -1,12 +1,12 @@
 
 
-/*--------------------Indico los estilos b√°sicos-------------------*/
+/*--------------------Indico los estilos b·sicos-------------------*/
 
 body {
    min-width: 884px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight:300;
-  text-align: left;
+  text-align: center;
   text-decoration: none;
 }
 a{
@@ -14,8 +14,9 @@ a{
   list-style: none;
 }
 
-h2 {
+h1 {
   text-align: center;
+  color:#272727;
 }
 
 #wrapper {
@@ -103,15 +104,6 @@ img.ca-icon{
   float:left;
   margin-right: 10px;
 }
-
-img.data-prof{
-  width: 250px;
-  height: 250px;
-  float:right;
-  margin: 20px;
-
-}
-
 #rightTopMenuContainer{
   width: 100%;
    height: 42px;
@@ -227,7 +219,7 @@ border-radius: 125px;
   vertical-align: middle;
   text-decoration: none;
   padding: 20px 20px;
-  font-size: 14px;
+  font-size: 12px;
   color: #737373;
 }
 .event-title{
@@ -238,3 +230,5 @@ width: 60px;
 height: 60px;
 float:left;
 }
+/* CSS Document */
+
