--- a/Maquetacion HTML/estilos_event.css
+++ b/Maquetacion HTML/estilos_event.css
@@ -232,9 +232,42 @@ border-radius: 125px;
 }
 .event-title{
   font-weight: bold;
+  color: rgb(103, 98, 98);
+}
+.event-description{
+  color: rgb(103, 98, 98);
 }
 .event img {
 width: 60px;
 height: 60px;
 float:left;
 }
+
+.event-body {
+margin-left: 88px;
+text-align: justify;
+}
+
+.profile{
+  width: 35%;
+  height: 10%;
+  padding: 10px 10px 10px 10px;
+  display: block;
+  margin-left: 150px;
+  margin-top: -30px;
+  background: #fff;
+  -webkit-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
+  -moz-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
+  box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
+  text-align: left;
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+
+.text-profile{
+  font-weight: bold;
+}
+
