--- a/Maquetacion HTML/css/style.css
+++ b/Maquetacion HTML/css/style.css
@@ -10,16 +10,17 @@ SELECTION STYLING
 
 ::selection {
 	color: #fff;
-	background: #f676b2; /* Safari */
+	background-color:#f676b2; /* Safari */
 }
 ::-moz-selection {
 	color: #fff;
-	background: #f676b2; /* Firefox */
+	background-color: #f676b2; /* Firefox */
 }
 
 ::selection { 
 	color: #fff; 
-	background: #f676b2; } /* webkit, opera, IE9 */
+	background-color:
+\\n #f676b2; } /* webkit, opera, IE9 */
 
 /*******************
 BODY STYLING
@@ -162,7 +163,7 @@ CONTENT
 	color: #9d9e9e;
 	text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
 	
-	background: #fff;
+	background-color: #fff;
 	border: 1px solid #fff;
 	border-radius: 5px;
 	
@@ -177,12 +178,12 @@ CONTENT
 }
 
 .login-form .content .input:hover {
-	background: #dfe9ec;
+	background-color: #dfe9ec;
 	color: #414848;
 }
 
 .login-form .content .input:focus {
-	background: #dfe9ec;
+	background-color: #dfe9ec;
 	color: #414848;
 	
 	box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
@@ -213,12 +214,12 @@ CONTENT
 
 .user-icon {
 	top:147px; /* Positioning fix for slide-in, got lazy to think up of simpler method. */
-	background: rgba(65,72,72,0.75) url(../images/user-icon.png) no-repeat center;	
+	background-color: rgba(65,72,72,0.75) url(../images/user-icon.png) no-repeat center;	
 }
 
 .pass-icon {
 	top:221px;
-	background: rgba(65,72,72,0.75) url(../images/pass-icon.png) no-repeat center;
+	background-color: rgba(65,72,72,0.75) url(../images/pass-icon.png) no-repeat center;
 }
 
 /* Animation */
@@ -238,7 +239,7 @@ FOOTER
 	padding: 25px 30px 40px 30px;
 	overflow: auto;
 	
-	background: #d4dedf;
+	background-color: #d4dedf;
 	border-top: 1px solid #fff;
 	
 	box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
@@ -257,7 +258,7 @@ FOOTER
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
 	
-	background: #37D858;
+	background-color: #37D858;
 	border: 1px solid #1A9438;
 	border-radius: 5px;
 	cursor: pointer;
@@ -268,7 +269,7 @@ FOOTER
 }
 
 .login-form .footer .button:hover {
-	background: #16561C;
+	background-color: #16561C;
 	border: 1px solid rgba(256,256,256,0.75);
 	
 	box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
@@ -280,7 +281,7 @@ FOOTER
 	position: relative;
 	bottom: -1px;
 	
-	background: #56c2e1;
+	background-color: #56c2e1;
 	
 	box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
 	-moz-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
@@ -294,7 +295,7 @@ FOOTER
 	padding: 10px;
 	margin-right: 20px;
 	
-	background: none;
+	background-color: none;
 	border: none;
 	cursor: pointer;
 	
