--- a/NewCodingtonWebPortal/WebContent/css/login.css
+++ b/NewCodingtonWebPortal/WebContent/css/login.css
@@ -10,16 +10,16 @@ SELECTION STYLING
 
 ::selection {
 	color: #fff;
-	background: #f676b2; /* Safari */
+	background-color:#f676b2; /* Safari */
 }
 ::-moz-selection {
 	color: #fff;
-	background: #f676b2; /* Firefox */
+	background-color: #f676b2; /* Firefox */
 }
 
 ::selection { 
 	color: #fff; 
-	background: #f676b2; } /* webkit, opera, IE9 */
+	background-color:#f676b2; } /* webkit, opera, IE9 */
 
 /*******************
 BODY STYLING
@@ -32,11 +32,25 @@ BODY STYLING
 }
 
 body {
-	background-color: #2D2D37;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight:300;
 	text-align: left;
 	text-decoration: none;
+}
+
+header{
+	margin: 0 auto;
+}
+
+#logo{
+  height: 100px;
+  width: 40%;
+  min-width: 250px;
+  float: left;
+}
+#logo img{
+  width:auto;
+  height: 100px;
 }
 
 #wrapper {
@@ -78,7 +92,7 @@ body {
 	
 	/* CSS3 Gradient */
 	background-image: -webkit-gradient(radial, 0% 0%, 0% 100%, from(rgba(213,246,255,1)), to(rgba(213,246,255,0)));
-	background-image: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(213,246,255,1), rgba(213,246,255,0));
+	background-image: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(0, 0, 0, 1), rgba(213,246,255,0))
 	background-image: -moz-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
 	background-image: -ms-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
 	background-image: -o-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
@@ -148,7 +162,7 @@ CONTENT
 	color: #9d9e9e;
 	text-shadow: 1px 1px 0 rgba(256,256,256,1.0);
 	
-	background: #fff;
+	background-color: #fff;
 	border: 1px solid #fff;
 	border-radius: 5px;
 	
@@ -163,12 +177,12 @@ CONTENT
 }
 
 .login-form .content .input:hover {
-	background: #dfe9ec;
+	background-color: #dfe9ec;
 	color: #414848;
 }
 
 .login-form .content .input:focus {
-	background: #dfe9ec;
+	background-color: #dfe9ec;
 	color: #414848;
 	
 	box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
@@ -224,7 +238,7 @@ FOOTER
 	padding: 25px 30px 40px 30px;
 	overflow: auto;
 	
-	background: #d4dedf;
+	background-color: #d4dedf;
 	border-top: 1px solid #fff;
 	
 	box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
@@ -243,8 +257,8 @@ FOOTER
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
 	
-	background: #56c2e1;
-	border: 1px solid #46b3d3;
+	background-color: #37D858;
+	border: 1px solid #1A9438;
 	border-radius: 5px;
 	cursor: pointer;
 	
@@ -254,7 +268,7 @@ FOOTER
 }
 
 .login-form .footer .button:hover {
-	background: #122D4C;
+	background-color: #16561C;
 	border: 1px solid rgba(256,256,256,0.75);
 	
 	box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
@@ -266,7 +280,7 @@ FOOTER
 	position: relative;
 	bottom: -1px;
 	
-	background: #56c2e1;
+	background-color: #56c2e1;
 	
 	box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
 	-moz-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
@@ -280,7 +294,7 @@ FOOTER
 	padding: 10px;
 	margin-right: 20px;
 	
-	background: none;
+	background-color: none;
 	border: none;
 	cursor: pointer;
 	
