--- a/Maquetacion HTML/estilos_event.css
+++ b/Maquetacion HTML/estilos_event.css
@@ -248,6 +248,11 @@ margin-left: 88px;
 text-align: justify;
 }
 
+.about {
+margin-right: 30px;
+text-align: justify;
+}
+
 .profile{
   width: 35%;
   height: 10%;
@@ -269,5 +274,52 @@ text-align: justify;
 
 .text-profile{
   font-weight: bold;
+}
+
+.boton1, boton2{
+    font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	position: absolute;
+	right: 0;
+}
+
+input {
+    vertical-align:middle;
+    display:inline-block;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0px 1px 1px rgb(204, 204, 204) inset, 0px 1px 0px rgb(255, 255, 255);
+    font: 12px 'Lucida Sans Unicode','Trebuchet MS',Arial,Helvetica;
+    background-color: rgb(241, 241, 241);
+}
+
+
+input[type="register"]{
+text-align:center;
+margin-right:60px;
+margin-top:285px;
+box-shadow: 0px 2px 0px 0px #d9d9d9;
+background-color: #ffffff;
+border-radius: 6px;
+border: 1px solid #dcdcdc;
+color:#000000;
+font-size: 15px;
+font-weight: bold;
+padding: 6px 24px;
+text-shadow: 0px 1px 0px #ffffff;
+}
+
+input[type="unregister"]{
+text-align:center;
+margin-right:60px;
+margin-top:325px;
+box-shadow: 0px 2px 0px 0px #d9d9d9;
+background-color: #ffffff;
+border-radius: 6px;
+border: 1px solid #dcdcdc;
+color:#000000;
+font-size: 15px;
+font-weight: bold;
+padding: 6px 24px;
+text-shadow: 0px 1px 0px #ffffff;
 }
 
