--- a/NewCodingtonWebPortal/WebContent/css/estilos_event.css
+++ b/NewCodingtonWebPortal/WebContent/css/estilos_event.css
@@ -1,325 +1,341 @@
-
-
 /*--------------------Indico los estilos básicos-------------------*/
-
 body {
-   min-width: 884px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight:300;
-  text-align: left;
-  text-decoration: none;
+	min-width: 884px;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
+		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 300;
+	text-align: left;
+	text-decoration: none;
 }
-a{
-  text-decoration: none;
-  list-style: none;
+
+a {
+	text-decoration: none;
+	list-style: none;
 }
 
 h2 {
-  text-align: center;
+	text-align: center;
 }
 
 #wrapper {
- margin: 0 auto;
-}
-#logo{
-  height: 100px;
-  width: 40%;
-  min-width: 250px;
-  float: left;
-}
-#logo img{
-  width:auto;
-  height: 100px;
-}
-#title{
-  height: 80px;
-font-size: 40px;
-float: right;
-margin-top: 50px;
-margin-right: 25px;
-font-weight: bold;
-color: #279C37;
+	margin: 0 auto;
 }
 
-#webname{
-   display: block;
-   max-height: 100%; 
+#logo {
+	height: 100px;
+	width: 40%;
+	min-width: 250px;
+	float: left;
 }
 
+#logo img {
+	width: auto;
+	height: 100px;
+}
+
+#title {
+	height: 80px;
+	font-size: 40px;
+	float: right;
+	margin-top: 50px;
+	margin-right: 25px;
+	font-weight: bold;
+	color: #279C37;
+}
+
+#webname {
+	display: block;
+	max-height: 100%;
+}
 
 #LeftMenu {
-   width: 10%;
-min-width: 150px;
-float: left;
-font-size: 12px;
+	width: 10%;
+	min-width: 150px;
+	float: left;
+	font-size: 12px;
 }
-#LeftMenu img{
-  vertical-align: middle;
-}
-.headerMenu{
-width: 100%;
-height: 100%;
-margin-bottom: 4px;
-background-color: rgba(185, 195, 186, 1);
-padding: 20px 10px 20px 20px;
-text-align: center;
-color: #FFF;
-font-weight: 900;
- -webkit-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  -moz-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  -webkit-transition: all 300ms linear;
-  -moz-transition: all 300ms linear;
-  -o-transition: all 300ms linear;
-  -ms-transition: all 300ms linear;
-  transition: all 300ms linear;
 
+#LeftMenu img {
+	vertical-align: middle;
 }
-.categoria{
-  width: 100%;
-  height: 100%;
-  padding: 20px 10px 20px 20px;
-  margin-bottom: 4px;
-  display: block;
-  background: #fff;
-  -webkit-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  -moz-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  text-align: left;
-  -webkit-transition: all 300ms linear;
-  -moz-transition: all 300ms linear;
-  -o-transition: all 300ms linear;
-  -ms-transition: all 300ms linear;
-  transition: all 300ms linear;
+
+.headerMenu {
+	width: 100%;
+	height: 100%;
+	margin-bottom: 4px;
+	background-color: rgba(185, 195, 186, 1);
+	padding: 20px 10px 20px 20px;
+	text-align: center;
+	color: #FFF;
+	font-weight: 900;
+	-webkit-box-shadow: inset -1px 0 1px rgba(2, 6, 51, 0.2), inset 1px 0
+		1px rgba(2, 6, 51, 0.2), inset 0 0 15px rgba(2, 6, 51, 0.2);
+	-moz-box-shadow: inset -1px 0 1px rgba(2, 6, 51, 0.2), inset 1px 0 1px
+		rgba(2, 6, 51, 0.2), inset 0 0 15px rgba(2, 6, 51, 0.2);
+	box-shadow: inset -1px 0 1px rgba(2, 6, 51, 0.2), inset 1px 0 1px
+		rgba(2, 6, 51, 0.2), inset 0 0 15px rgba(2, 6, 51, 0.2);
+	-webkit-transition: all 300ms linear;
+	-moz-transition: all 300ms linear;
+	-o-transition: all 300ms linear;
+	-ms-transition: all 300ms linear;
+	transition: all 300ms linear;
 }
+
+.categoria {
+	width: 100%;
+	height: 100%;
+	padding: 20px 10px 20px 20px;
+	margin-bottom: 4px;
+	display: block;
+	background: #fff;
+	-webkit-box-shadow: inset -1px 0 1px rgba(2, 6, 51, 0.2), inset 1px 0
+		1px rgba(2, 6, 51, 0.2), inset 0 0 15px rgba(2, 6, 51, 0.2);
+	-moz-box-shadow: inset -1px 0 1px rgba(2, 6, 51, 0.2), inset 1px 0 1px
+		rgba(2, 6, 51, 0.2), inset 0 0 15px rgba(2, 6, 51, 0.2);
+	box-shadow: inset -1px 0 1px rgba(2, 6, 51, 0.2), inset 1px 0 1px
+		rgba(2, 6, 51, 0.2), inset 0 0 15px rgba(2, 6, 51, 0.2);
+	text-align: left;
+	-webkit-transition: all 300ms linear;
+	-moz-transition: all 300ms linear;
+	-o-transition: all 300ms linear;
+	-ms-transition: all 300ms linear;
+	transition: all 300ms linear;
+}
+
 .categoria a {
-  color: #636260;
-  text-align: center;
-  text-decoration: none;
-}
-img.ca-icon{
-  width: 19px;
-  height: 19px;
-  float:left;
-  margin-right: 10px;
+	color: #636260;
+	text-align: center;
+	text-decoration: none;
 }
 
-img.data-prof{
-  width: 250px;
-  height: 250px;
-  float:right;
-  margin: 20px;
-
+img.ca-icon {
+	width: 19px;
+	height: 19px;
+	float: left;
+	margin-right: 10px;
 }
 
-#rightTopMenuContainer{
-  width: 100%;
-   height: 42px;
-  position:fixed;
-  min-width:500px;
-  top: 0;
-  right: 0;
-  background: url(../images/tab_b.png) repeat-x 0 0;
+img.data-prof {
+	width: 250px;
+	height: 250px;
+	float: right;
+	margin: 20px;
+}
 
-  z-index: 999;
+#rightTopMenuContainer {
+	width: 100%;
+	height: 42px;
+	position: fixed;
+	min-width: 500px;
+	top: 0;
+	right: 0;
+	background: url(../images/tab_b.png) repeat-x 0 0;
+	z-index: 999;
 }
 
 ul.rightTopMenu {
-display: block;
-position: relative;
-float: right;
-clear: right;
-height: 42px;
-width: auto;
-font-weight: bold;
-line-height: 42px;
-margin: 0;
-right: 150px;
-color: white;
-font-size: 80%;
-text-align: center;
+	display: block;
+	position: relative;
+	float: right;
+	clear: right;
+	height: 42px;
+	width: auto;
+	font-weight: bold;
+	line-height: 42px;
+	margin: 0;
+	right: 150px;
+	color: white;
+	font-size: 80%;
+	text-align: center;
 }
 
 .rightTopMenu li {
-float: left;
-text-transform: uppercase;
-font-size: 14px;
-line-height: 15px;
-list-style: none;
-padding: 10px 0;
-height: 42px;
-background: url(../images/tab_m.png) repeat-x 0 0;
+	float: left;
+	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 15px;
+	list-style: none;
+	padding: 10px 0;
+	height: 42px;
+	background: url(../images/tab_m.png) repeat-x 0 0;
 }
+
 #rightTab {
-background: url(../images/tab_r.png) no-repeat left 0;
-height: 42px;
-width: 30px;
-padding: 0;
-margin: 0;
-display: block;
-float: left;
+	background: url(../images/tab_r.png) no-repeat left 0;
+	height: 42px;
+	width: 30px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	float: left;
 }
-#leftTab{
-  background: url(../images/tab_l.png) no-repeat left 0;
-height: 42px;
-width: 30px;
-padding: 0;
-margin: 0;
-display: block;
-float: left;
+
+#leftTab {
+	background: url(../images/tab_l.png) no-repeat left 0;
+	height: 42px;
+	width: 30px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	float: left;
 }
+
 .rightTopMenu li a {
-padding: 10px 15px;
-color: white;
-text-decoration: none;
+	padding: 10px 15px;
+	color: white;
+	text-decoration: none;
 }
-.rightTopMenu li.last a{
-  color:#44C358;
+
+.rightTopMenu li.last a {
+	color: #44C358;
 }
 
 /*---------------------LAYOUT--------------------*/
 /*Fijo la estructura de cajas*/
-
 #contenedor {
-
-float: left;
-width: 78%;
-height: 200%;
-min-width: 100px;
-margin-left: 40px;
-z-index: 5;
-background-color: #F3F3F3;
-border: 1px solid #fff;
-border-radius: 5px;
-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
--moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
--webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-padding: 26px 0px;
-
+	float: left;
+	width: 78%;
+	height: 200%;
+	min-width: 100px;
+	margin-left: 40px;
+	z-index: 5;
+	background-color: #F3F3F3;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+	padding: 26px 0px;
 }
 
 /*Para limpiar el float*/
-.clear{
-  clear: both;
+.clear {
+	clear: both;
 }
 
 .event-image {
-  width: 60px;
-height: 60px;
-border: 5px solid #f6f6f6;
-overflow: hidden;
-position: relative;
-float: left;
-background: #fff;
-margin-right: 14px;
-box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
-border-radius: 125px;
+	width: 60px;
+	height: 60px;
+	border: 5px solid #f6f6f6;
+	overflow: hidden;
+	position: relative;
+	float: left;
+	background: #fff;
+	margin-right: 14px;
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+	border-radius: 125px;
+}
 
+.event ul {
+	display: block;
+	width: 100%;
+	list-style: none;
+	font: normal 13px Roboto, arial, sans-serif;
 }
-.event ul{
-    display: block;
-    width: 100%;
-    list-style: none;
-    font: normal 13px Roboto,arial,sans-serif;
+
+.event li {
+	display: block;
+	vertical-align: middle;
+	text-decoration: none;
+	padding: 20px 20px;
+	font-size: 14px;
+	color: #737373;
 }
-.event li{
-  display: block;
-  vertical-align: middle;
-  text-decoration: none;
-  padding: 20px 20px;
-  font-size: 14px;
-  color: #737373;
+
+.event-title {
+	font-weight: bold;
+	color: rgb(103, 98, 98);
 }
-.event-title{
-  font-weight: bold;
-  color: rgb(103, 98, 98);
+
+.event-description {
+	color: rgb(103, 98, 98);
 }
-.event-description{
-  color: rgb(103, 98, 98);
-}
+
 .event img {
-width: 60px;
-height: 60px;
-float:left;
+	width: 60px;
+	height: 60px;
+	float: left;
 }
 
 .event-body {
-margin-left: 88px;
-text-align: justify;
+	margin-left: 88px;
+	text-align: justify;
 }
 
 .about {
-margin-right: 30px;
-text-align: justify;
+	margin-right: 30px;
+	text-align: justify;
 }
 
-.profile{
-  width: 35%;
-  height: 10%;
-  padding: 10px 10px 10px 10px;
-  display: block;
-  margin-left: 150px;
-  margin-top: -30px;
-  background: #fff;
-  -webkit-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  -moz-box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  box-shadow: inset -1px 0 1px rgba(2, 6, 51,0.2),inset 1px 0 1px rgba(2, 6, 51,0.2),inset 0 0 15px rgba(2, 6, 51,0.2);
-  text-align: left;
-  -webkit-transition: all 300ms linear;
-  -moz-transition: all 300ms linear;
-  -o-transition: all 300ms linear;
-  -ms-transition: all 300ms linear;
-  transition: all 300ms linear;
+.profile {
+	
 }
 
-.text-profile{
-  font-weight: bold;
+.text-profile {
+	font-weight: bold;
 }
 
-.boton1, boton2{
-    font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+.boton1,boton2 {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
+		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	position: absolute;
 	right: 0;
 }
 
 input {
-    vertical-align:middle;
-    display:inline-block;
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 5px 5px 5px 5px;
-    box-shadow: 0px 1px 1px rgb(204, 204, 204) inset, 0px 1px 0px rgb(255, 255, 255);
-    font: 12px 'Lucida Sans Unicode','Trebuchet MS',Arial,Helvetica;
-    background-color: rgb(241, 241, 241);
+	vertical-align: middle;
+	display: inline-block;
+	border: 1px solid rgb(204, 204, 204);
+	border-radius: 5px 5px 5px 5px;
+	box-shadow: 0px 1px 1px rgb(204, 204, 204) inset, 0px 1px 0px
+		rgb(255, 255, 255);
+	font: 12px 'Lucida Sans Unicode', 'Trebuchet MS', Arial, Helvetica;
+	background-color: rgb(241, 241, 241);
 }
 
-
-input[type="register"]{
-text-align:center;
-margin-right:60px;
-margin-top:285px;
-box-shadow: 0px 2px 0px 0px #d9d9d9;
-background-color: #ffffff;
-border-radius: 6px;
-border: 1px solid #dcdcdc;
-color:#000000;
-font-size: 15px;
-font-weight: bold;
-padding: 6px 24px;
-text-shadow: 0px 1px 0px #ffffff;
+input[type="register"] {
+	text-align: center;
+	margin-right: 60px;
+	margin-top: 285px;
+	box-shadow: 0px 2px 0px 0px #d9d9d9;
+	background-color: #ffffff;
+	border-radius: 6px;
+	border: 1px solid #dcdcdc;
+	color: #000000;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 6px 24px;
+	text-shadow: 0px 1px 0px #ffffff;
 }
 
-input[type="unregister"]{
-text-align:center;
-margin-right:60px;
-margin-top:325px;
-box-shadow: 0px 2px 0px 0px #d9d9d9;
-background-color: #ffffff;
-border-radius: 6px;
-border: 1px solid #dcdcdc;
-color:#000000;
-font-size: 15px;
-font-weight: bold;
-padding: 6px 24px;
-text-shadow: 0px 1px 0px #ffffff;
+input[type="unregister"] {
+	text-align: center;
+	margin-right: 60px;
+	margin-top: 325px;
+	box-shadow: 0px 2px 0px 0px #d9d9d9;
+	background-color: #ffffff;
+	border-radius: 6px;
+	border: 1px solid #dcdcdc;
+	color: #000000;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 6px 24px;
+	text-shadow: 0px 1px 0px #ffffff;
 }
 
+.button {
+	float: left;
+	padding: 11px 25px;
+	/* font-family: 'Bree Serif', serif; */
+	font-weight: 300;
+	font-size: 18px;
+	color: #fff;
+	text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.25);
+	background-color: #AFBCDF;
+	margin-left: 15px;
+	border-radius: 5px;
+	cursor: pointer;
+	box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
+	-moz-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
+	-webkit-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
+}
