--- a/NewCodingtonSpringPortal/WebContent/css/estilos_form.css
+++ b/NewCodingtonSpringPortal/WebContent/css/estilos_form.css
@@ -1,29 +1,28 @@
-
-
 /*--------------------Indico los estilos básicos-------------------*/
-
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight:300;
-  text-align: left;
-  text-decoration: none;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
+		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 300;
+	text-align: left;
+	text-decoration: none;
 }
 
 #wrapper {
- margin: 0 auto;
+	margin: 0 auto;
 }
 
-#logo img{
-  width:auto;
-  height: 100px;
+#logo img {
+	width: auto;
+	height: 100px;
 }
 
-#webname{
-  color: white;
+#webname {
+	color: white;
 }
-#webname span{
-  background-color: rgb(117, 181, 203);
-  padding: 0 10px 0 10px;
+
+#webname span {
+	background-color: rgb(117, 181, 203);
+	padding: 0 10px 0 10px;
 }
 
 /*#LeftMenu {
@@ -32,216 +31,224 @@ body {
     font-size: 20px;
 }*/
 .categoria {
-    width: 100%;
-    position: relative;
-    display: block;
-    padding: 20px 20px;
+	width: 100%;
+	position: relative;
+	display: block;
+	padding: 20px 20px;
 }
+
 .categoria a {
-text-align: left;
-width: 100%;
-display: block;
-background-color: #333;
-color: white;
-position: relative;
-text-decoration: none;
-margin: 0px;
+	text-align: left;
+	width: 100%;
+	display: block;
+	background-color: #333;
+	color: white;
+	position: relative;
+	text-decoration: none;
+	margin: 0px;
 }
 
 h2 {
-  text-align: center;
+	text-align: center;
 }
 /*---------------------LAYOUT--------------------*/
 /*Fijo la estructura de cajas*/
-
 #contenedor {
-width: 75%;
-min-width: 700px;
-margin: 0 auto;
-margin-top: 26px;
-position: relative;
-z-index: 5;
-background-color: #f3f3f3;
-border: 1px solid #fff;
-border-radius: 5px;
-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
--moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
--webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-padding: 4px 15px;
+	width: 75%;
+	min-width: 700px;
+	margin: 0 auto;
+	margin-top: 26px;
+	position: relative;
+	z-index: 5;
+	background-color: #f3f3f3;
+	border: 1px solid #fff;
+	border-radius: 5px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+	padding: 4px 15px;
 }
 
-#rightTopMenuContainer{
-  width: 100%;
-   height: 42px;
-  position:fixed;
-  min-width:500px;
-  top: 0;
-  right: 0;
-  background: url(../images/tab_b.png) repeat-x 0 0;
-
-  z-index: 999;
+#rightTopMenuContainer {
+	width: 100%;
+	height: 42px;
+	position: fixed;
+	min-width: 750px;
+	top: 0;
+	right: 0;
+	background: url(../images/tab_b.png) repeat-x 0 0;
+	z-index: 999;
 }
 
 ul.rightTopMenu {
-display: block;
-position: relative;
-float: right;
-clear: right;
-height: 42px;
-width: auto;
-font-weight: bold;
-line-height: 42px;
-margin: 0;
-right: 150px;
-color: white;
-font-size: 80%;
-text-align: center;
+	display: block;
+	position: relative;
+	float: right;
+	clear: right;
+	height: 42px;
+	width: auto;
+	font-weight: bold;
+	line-height: 42px;
+	margin: 0;
+	right: 150px;
+	color: white;
+	font-size: 80%;
+	text-align: center;
 }
 
 .rightTopMenu li {
-float: left;
-text-transform: uppercase;
-font-size: 14px;
-line-height: 15px;
-list-style: none;
-padding: 10px 0;
-height: 42px;
-background: url(../images/tab_m.png) repeat-x 0 0;
+	float: left;
+	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 15px;
+	list-style: none;
+	padding: 10px 0;
+	height: 42px;
+	background: url(../images/tab_m.png) repeat-x 0 0;
 }
+
 #rightTab {
-background: url(../images/tab_r.png) no-repeat left 0;
-height: 42px;
-width: 30px;
-padding: 0;
-margin: 0;
-display: block;
-float: left;
+	background: url(../images/tab_r.png) no-repeat left 0;
+	height: 42px;
+	width: 30px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	float: left;
 }
-#leftTab{
-  background: url(../images/tab_l.png) no-repeat left 0;
-height: 42px;
-width: 30px;
-padding: 0;
-margin: 0;
-display: block;
-float: left;
+
+#leftTab {
+	background: url(../images/tab_l.png) no-repeat left 0;
+	height: 42px;
+	width: 30px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	float: left;
 }
+
 .rightTopMenu li a {
-padding: 10px 15px;
-color: white;
-text-decoration: none;
+	padding: 10px 15px;
+	color: white;
+	text-decoration: none;
 }
-.rightTopMenu li.last a{
-  color:#44C358;
+
+.rightTopMenu li.last a {
+	color: #44C358;
 }
 
 /*Error de campos obligatorios en rojo*/
-#error{
-  margin-bottom: 10px;
-  color:red;
+#error {
+	margin-bottom: 10px;
+	color: red;
 }
 /*Cada caja le pongo una altura y fijo un borde superior de 2px*/
-.caja{
-   margin: 0;
-  padding: 1em;
-  height: 40px;
-  border-top: 2px solid #CCC;
-
+.caja {
+	margin: 0;
+	padding: 1em;
+	height: 40px;
+	border-top: 2px solid #CCC;
 }
 /*Dentro de cada caja has input+etiquetainput a la izq y otros a la dcha*/
-.izquierda{
-  float:left;
-  margin-left: 15px;
+.izquierda {
+	float: left;
+	margin-left: 15px;
 }
-.derecha{
-  float:left;
-  margin-left: 20px;
+
+.derecha {
+	float: left;
+	margin-left: 20px;
 }
 /*Para limpiar el float*/
-.clear{
-  clear: both;
+.clear {
+	clear: both;
 }
 /*Fijo todos los parrafos de ayuda ocultos en un principio y con javascript cambiare cuando pase el raton por encima de la caja*/
-p.ayuda{
-  visibility:hidden;
-  border: 2px solid #CCC;
-  padding:7px;
-  background-color: white;
-  border-radius: 15px;
-  position: absolute;
-  left:0;
-  top: 0;
+p.ayuda {
+	visibility: hidden;
+	border: 2px solid #CCC;
+	padding: 7px;
+	background-color: white;
+	border-radius: 15px;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 /*Todos los mensajes de error de caja tienen q estar en rojo y colocados a la dcha del campo*/
-.error{
-  float:left;
-  margin-left: 20px;
-  color:red;
+.error {
+	float: left;
+	margin-left: 20px;
+	color: red;
 }
 /*Boton de enviar lo fijo a la decha del todo del contenedor*/
-.botones{
-    font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+.botones {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
+		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	position: absolute;
 	right: 0;
 }
-input[type="submit"], input[type="reset"] {
-margin: 10px auto;
-box-shadow: 0px 2px 0px 0px #d9d9d9;
-background-color: #ffffff;
-border-radius: 6px;
-border: 1px solid #dcdcdc;
-color:#000000;
-font-size: 15px;
-font-weight: bold;
-padding: 6px 24px;
-text-shadow: 0px 1px 0px #ffffff;
+
+input[type="submit"],input[type="reset"] {
+	margin: 10px auto;
+	box-shadow: 0px 2px 0px 0px #d9d9d9;
+	background-color: #ffffff;
+	border-radius: 6px;
+	border: 1px solid #dcdcdc;
+	color: #000000;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 6px 24px;
+	text-shadow: 0px 1px 0px #ffffff;
 }
 /*--------------------TITULOS DE LA IZQUIERDA---------------------------*/
 /*Etiquetas de input letra un poco mas pequeña un 20% mas pequeña q el titulo */
-label{
+label {
 	font-size: 0.8em;
 }
 /*titulos de caja en negrita y ancho determinado*/
 label.titulo {
-  font-size: 1em;
-  font-weight: bold;
-  float: left;
-  width: 200px;
-  text-align: right;
+	font-size: 1em;
+	font-weight: bold;
+	float: left;
+	width: 200px;
+	text-align: right;
 }
- /*Los asteriscos de los campos requeridos en rojo y negrita*/
+/*Los asteriscos de los campos requeridos en rojo y negrita*/
 span.requerido {
-  font-size: 1.3em;
-  font-weight: bold;
-  color: #C00;
+	font-size: 1.3em;
+	font-weight: bold;
+	color: #C00;
 }
 
 /* Cambiar el color en el :hover y resaltar los campos s */
 .caja:hover {
+	
 }
+
 .caja.botones:hover {
-  background-color: transparent;
+	background-color: transparent;
 }
 
 /*---------pongo algunos campos de input mas grandes---------*/
- input#campoApellidos, input#campoMail,input#campoDomicilio{
- 	width: 200px;
-
- }
- input#alta{
- }
- input:focus{
-  border-width: 3px;
- }
-
-
-input, input[type="password"] {
-    vertical-align:middle;
-    display:inline-block;
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 5px 5px 5px 5px;
-    box-shadow: 0px 1px 1px rgb(204, 204, 204) inset, 0px 1px 0px rgb(255, 255, 255);
-    font: 12px 'Lucida Sans Unicode','Trebuchet MS',Arial,Helvetica;
-    background-color: rgb(241, 241, 241);
+input#campoApellidos,input#campoMail,input#campoDomicilio {
+	width: 200px;
 }
 
+input#alta {
+	
+}
+
+input:focus {
+	border-width: 3px;
+}
+
+input,input[type="password"] {
+	vertical-align: middle;
+	display: inline-block;
+	border: 1px solid rgb(204, 204, 204);
+	border-radius: 5px 5px 5px 5px;
+	box-shadow: 0px 1px 1px rgb(204, 204, 204) inset, 0px 1px 0px
+		rgb(255, 255, 255);
+	font: 12px 'Lucida Sans Unicode', 'Trebuchet MS', Arial, Helvetica;
+	background-color: rgb(241, 241, 241);
+}
