--- a/NewCodingtonSpringPortal/WebContent/css/login.css
+++ b/NewCodingtonSpringPortal/WebContent/css/login.css
@@ -91,11 +91,12 @@ header{
 	background-repeat: no-repeat; 
 	
 	/* CSS3 Gradient */
-	background-image: -webkit-gradient(radial, 0% 0%, 0% 100%, from(rgba(213,246,255,1)), to(rgba(213,246,255,0)));
-	background-image: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(0, 0, 0, 1), rgba(213,246,255,0))
-	background-image: -moz-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
-	background-image: -ms-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
-	background-image: -o-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
+	
+	background: -webkit-gradient(radial, 0% 0%, 0% 100%, from(rgba(213,246,255,1)), to(rgba(213,246,255,0)));
+	background: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(0, 0, 0, 1), rgba(213,246,255,0));
+	background: -moz-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
+	background: -ms-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
+	background: -o-radial-gradient(50% 50%, 50% 50%, rgba(213,246,255,1), rgba(213,246,255,0));
 }
 
 
@@ -192,8 +193,6 @@ CONTENT
 
 .register-form {
 	padding: 0 30px 25px 30px;
-}
-
 }
 
 .user-icon, .pass-icon {
