--- a/NewCodingtonSpringPortal/WebContent/css/estilos_form.css
+++ b/NewCodingtonSpringPortal/WebContent/css/estilos_form.css
@@ -179,6 +179,7 @@ p.ayuda {
 	float: left;
 	margin-left: 20px;
 	color: red;
+	font-size: 13px;
 }
 /*Boton de enviar lo fijo a la decha del todo del contenedor*/
 .botones {
@@ -188,7 +189,8 @@ p.ayuda {
 	right: 0;
 }
 
-input[type="submit"],input[type="reset"] {
+
+input[type="submit"],input[type="reset"],.botonBack {
 	margin: 10px auto;
 	box-shadow: 0px 2px 0px 0px #d9d9d9;
 	background-color: #ffffff;
