--- a/NewCodingtonSpringPortal/.settings/org.eclipse.wst.common.component
+++ b/NewCodingtonSpringPortal/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="NewCodingtonSpringPortal">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/images"/>
         <property name="context-root" value="NewCodingtonSpringPortal"/>
         <property name="java-output-path" value="/NewCodingtonSpringPortal/build/classes"/>
     </wb-module>
