--- a/NewCodingtonSpringPortal/WebContent/css/estilos_event.css
+++ b/NewCodingtonSpringPortal/WebContent/css/estilos_event.css
@@ -10,13 +10,18 @@ body {
 
 a {
 	text-decoration: none;
-	list-style: none;
 }
 
-h2 {
+h2,h4 {
+	color: #737373;
 	text-align: center;
 }
-
+ul li{
+	list-style:none;
+}
+li a{
+	text-decoration: none;
+}
 #wrapper {
 	margin: 0 auto;
 }
@@ -275,7 +280,7 @@ ul.rightTopMenu {
 	font-weight: bold;
 }
 
-.boton1,boton2 {
+.boton1, boton2 {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light",
 		"Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	position: absolute;
@@ -290,7 +295,6 @@ input {
 	box-shadow: 0px 1px 1px rgb(204, 204, 204) inset, 0px 1px 0px
 		rgb(255, 255, 255);
 	font: 12px 'Lucida Sans Unicode', 'Trebuchet MS', Arial, Helvetica;
-	background-color: rgb(241, 241, 241);
 }
 
 input[type="register"] {
@@ -323,12 +327,13 @@ input[type="unregister"] {
 	text-shadow: 0px 1px 0px #ffffff;
 }
 
-.button {
+.button, input[type="submit"] {
+	color:white;
 	float: left;
 	padding: 11px 25px;
 	/* font-family: 'Bree Serif', serif; */
 	font-weight: 300;
-	font-size: 18px;
+	font-size: 15px;
 	color: #fff;
 	text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.25);
 	background-color: #AFBCDF;
@@ -338,4 +343,29 @@ input[type="unregister"] {
 	box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
 	-moz-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
 	-webkit-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
+}
+h6.messageOk{
+	color:green;
+	background: url(../images/images_icon.png) center left no-repeat!important;
+}
+h6.messageError{
+	color:red;
+	background: url(../images/images_icon.png) center left no-repeat!important;
+}
+
+ul li.show {
+	font-size: 13px;
+	border-top: 1px solid #ddd;
+	list-style:none;
+	padding: 5px;
+} 
+
+li.show span{
+	color: #737373;
+	font-weight: normal;
+}
+img.image-large-event{
+	width: 200px;
+	height: auto;
+	float:right;
 }
