--- a/NewCodingtonSpringPortal/WebContent/css/estilos_event.css
+++ b/NewCodingtonSpringPortal/WebContent/css/estilos_event.css
@@ -344,13 +344,20 @@ input[type="unregister"] {
 	-moz-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
 	-webkit-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
 }
-h6.messageOk{
-	color:green;
-	background: url(../images/images_icon.png) center left no-repeat!important;
+h6.messageOk {
+	padding: 10px 40px;
+	text-align: left;
+	margin-left: 30px;
+	color: green;
+	background: url(../images/ok.gif) center left no-repeat !important;
 }
-h6.messageError{
-	color:red;
-	background: url(../images/images_icon.png) center left no-repeat!important;
+
+h6.messageError {
+	padding: 10px 40px;
+	text-align: left;
+	margin-left: 30px;
+	color: red;
+	background: url(../images/error.gif) center left no-repeat !important;
 }
 
 ul li.show {
